// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill matches the choice snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    choice={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "top": "top",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className={undefined}
        >
          <Jss(Choice)
            disabled={undefined}
            id={1}
            onClick={[Function]}
            selected={undefined}
          >
            foo
          </Jss(Choice)>
          <Jss(Choice)
            disabled={undefined}
            id={2}
            onClick={[Function]}
            selected={undefined}
          >
            bar
          </Jss(Choice)>
          <Jss(Choice)
            disabled={undefined}
            id={3}
            onClick={[Function]}
            selected={undefined}
          >
            baz
          </Jss(Choice)>
          <Jss(Choice)
            disabled={undefined}
            id={4}
            onClick={[Function]}
            selected={undefined}
          >
            qux
          </Jss(Choice)>
        </div>,
        undefined,
      ],
      "className": "container",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Choice)
              disabled={undefined}
              id={1}
              onClick={[Function]}
              selected={undefined}
            >
              foo
            </Jss(Choice)>,
            <Jss(Choice)
              disabled={undefined}
              id={2}
              onClick={[Function]}
              selected={undefined}
            >
              bar
            </Jss(Choice)>,
            <Jss(Choice)
              disabled={undefined}
              id={3}
              onClick={[Function]}
              selected={undefined}
            >
              baz
            </Jss(Choice)>,
            <Jss(Choice)
              disabled={undefined}
              id={4}
              onClick={[Function]}
              selected={undefined}
            >
              qux
            </Jss(Choice)>,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": "foo",
              "disabled": undefined,
              "id": 1,
              "onClick": [Function],
              "selected": undefined,
            },
            "ref": null,
            "rendered": "foo",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "children": "bar",
              "disabled": undefined,
              "id": 2,
              "onClick": [Function],
              "selected": undefined,
            },
            "ref": null,
            "rendered": "bar",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "children": "baz",
              "disabled": undefined,
              "id": 3,
              "onClick": [Function],
              "selected": undefined,
            },
            "ref": null,
            "rendered": "baz",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "class",
            "props": Object {
              "children": "qux",
              "disabled": undefined,
              "id": 4,
              "onClick": [Function],
              "selected": undefined,
            },
            "ref": null,
            "rendered": "qux",
            "type": [Function],
          },
        ],
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className={undefined}
          >
            <Jss(Choice)
              disabled={undefined}
              id={1}
              onClick={[Function]}
              selected={undefined}
            >
              foo
            </Jss(Choice)>
            <Jss(Choice)
              disabled={undefined}
              id={2}
              onClick={[Function]}
              selected={undefined}
            >
              bar
            </Jss(Choice)>
            <Jss(Choice)
              disabled={undefined}
              id={3}
              onClick={[Function]}
              selected={undefined}
            >
              baz
            </Jss(Choice)>
            <Jss(Choice)
              disabled={undefined}
              id={4}
              onClick={[Function]}
              selected={undefined}
            >
              qux
            </Jss(Choice)>
          </div>,
          undefined,
        ],
        "className": "container",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Choice)
                disabled={undefined}
                id={1}
                onClick={[Function]}
                selected={undefined}
              >
                foo
              </Jss(Choice)>,
              <Jss(Choice)
                disabled={undefined}
                id={2}
                onClick={[Function]}
                selected={undefined}
              >
                bar
              </Jss(Choice)>,
              <Jss(Choice)
                disabled={undefined}
                id={3}
                onClick={[Function]}
                selected={undefined}
              >
                baz
              </Jss(Choice)>,
              <Jss(Choice)
                disabled={undefined}
                id={4}
                onClick={[Function]}
                selected={undefined}
              >
                qux
              </Jss(Choice)>,
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": "foo",
                "disabled": undefined,
                "id": 1,
                "onClick": [Function],
                "selected": undefined,
              },
              "ref": null,
              "rendered": "foo",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "children": "bar",
                "disabled": undefined,
                "id": 2,
                "onClick": [Function],
                "selected": undefined,
              },
              "ref": null,
              "rendered": "bar",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "children": "baz",
                "disabled": undefined,
                "id": 3,
                "onClick": [Function],
                "selected": undefined,
              },
              "ref": null,
              "rendered": "baz",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "children": "qux",
                "disabled": undefined,
                "id": 4,
                "onClick": [Function],
                "selected": undefined,
              },
              "ref": null,
              "rendered": "qux",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Pill matches the group snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "top": "top",
      }
    }
    group={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <Jss(Group)
          items={
            Array [
              Object {
                "id": 1,
                "label": "foo",
              },
              Object {
                "id": 2,
                "label": "bar",
              },
              Object {
                "id": 3,
                "label": "baz",
              },
              Object {
                "id": 4,
                "label": "qux",
              },
            ]
          }
          onSelect={[Function]}
          selected={undefined}
        />,
        undefined,
      ],
      "className": "container",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "items": Array [
            Object {
              "id": 1,
              "label": "foo",
            },
            Object {
              "id": 2,
              "label": "bar",
            },
            Object {
              "id": 3,
              "label": "baz",
            },
            Object {
              "id": 4,
              "label": "qux",
            },
          ],
          "onSelect": [Function],
          "selected": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <Jss(Group)
            items={
              Array [
                Object {
                  "id": 1,
                  "label": "foo",
                },
                Object {
                  "id": 2,
                  "label": "bar",
                },
                Object {
                  "id": 3,
                  "label": "baz",
                },
                Object {
                  "id": 4,
                  "label": "qux",
                },
              ]
            }
            onSelect={[Function]}
            selected={undefined}
          />,
          undefined,
        ],
        "className": "container",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "items": Array [
              Object {
                "id": 1,
                "label": "foo",
              },
              Object {
                "id": 2,
                "label": "bar",
              },
              Object {
                "id": 3,
                "label": "baz",
              },
              Object {
                "id": 4,
                "label": "qux",
              },
            ],
            "onSelect": [Function],
            "selected": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Pill matches the stack snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "top": "top",
      }
    }
    stack={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className={undefined}
        >
          <Jss(Stack)
            disabled={undefined}
            id={1}
            onClick={[Function]}
            onClose={[Function]}
          >
            foo
          </Jss(Stack)>
          <Jss(Stack)
            disabled={undefined}
            id={2}
            onClick={[Function]}
            onClose={[Function]}
          >
            bar
          </Jss(Stack)>
          <Jss(Stack)
            disabled={undefined}
            id={3}
            onClick={[Function]}
            onClose={[Function]}
          >
            baz
          </Jss(Stack)>
          <Jss(Stack)
            disabled={undefined}
            id={4}
            onClick={[Function]}
            onClose={[Function]}
          >
            qux
          </Jss(Stack)>
        </div>,
        undefined,
      ],
      "className": "container",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Stack)
              disabled={undefined}
              id={1}
              onClick={[Function]}
              onClose={[Function]}
            >
              foo
            </Jss(Stack)>,
            <Jss(Stack)
              disabled={undefined}
              id={2}
              onClick={[Function]}
              onClose={[Function]}
            >
              bar
            </Jss(Stack)>,
            <Jss(Stack)
              disabled={undefined}
              id={3}
              onClick={[Function]}
              onClose={[Function]}
            >
              baz
            </Jss(Stack)>,
            <Jss(Stack)
              disabled={undefined}
              id={4}
              onClick={[Function]}
              onClose={[Function]}
            >
              qux
            </Jss(Stack)>,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": "foo",
              "disabled": undefined,
              "id": 1,
              "onClick": [Function],
              "onClose": [Function],
            },
            "ref": null,
            "rendered": "foo",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "children": "bar",
              "disabled": undefined,
              "id": 2,
              "onClick": [Function],
              "onClose": [Function],
            },
            "ref": null,
            "rendered": "bar",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "children": "baz",
              "disabled": undefined,
              "id": 3,
              "onClick": [Function],
              "onClose": [Function],
            },
            "ref": null,
            "rendered": "baz",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "class",
            "props": Object {
              "children": "qux",
              "disabled": undefined,
              "id": 4,
              "onClick": [Function],
              "onClose": [Function],
            },
            "ref": null,
            "rendered": "qux",
            "type": [Function],
          },
        ],
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className={undefined}
          >
            <Jss(Stack)
              disabled={undefined}
              id={1}
              onClick={[Function]}
              onClose={[Function]}
            >
              foo
            </Jss(Stack)>
            <Jss(Stack)
              disabled={undefined}
              id={2}
              onClick={[Function]}
              onClose={[Function]}
            >
              bar
            </Jss(Stack)>
            <Jss(Stack)
              disabled={undefined}
              id={3}
              onClick={[Function]}
              onClose={[Function]}
            >
              baz
            </Jss(Stack)>
            <Jss(Stack)
              disabled={undefined}
              id={4}
              onClick={[Function]}
              onClose={[Function]}
            >
              qux
            </Jss(Stack)>
          </div>,
          undefined,
        ],
        "className": "container",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Stack)
                disabled={undefined}
                id={1}
                onClick={[Function]}
                onClose={[Function]}
              >
                foo
              </Jss(Stack)>,
              <Jss(Stack)
                disabled={undefined}
                id={2}
                onClick={[Function]}
                onClose={[Function]}
              >
                bar
              </Jss(Stack)>,
              <Jss(Stack)
                disabled={undefined}
                id={3}
                onClick={[Function]}
                onClose={[Function]}
              >
                baz
              </Jss(Stack)>,
              <Jss(Stack)
                disabled={undefined}
                id={4}
                onClick={[Function]}
                onClose={[Function]}
              >
                qux
              </Jss(Stack)>,
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": "foo",
                "disabled": undefined,
                "id": 1,
                "onClick": [Function],
                "onClose": [Function],
              },
              "ref": null,
              "rendered": "foo",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "children": "bar",
                "disabled": undefined,
                "id": 2,
                "onClick": [Function],
                "onClose": [Function],
              },
              "ref": null,
              "rendered": "bar",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "children": "baz",
                "disabled": undefined,
                "id": 3,
                "onClick": [Function],
                "onClose": [Function],
              },
              "ref": null,
              "rendered": "baz",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "children": "qux",
                "disabled": undefined,
                "id": 4,
                "onClick": [Function],
                "onClose": [Function],
              },
              "ref": null,
              "rendered": "qux",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Pill styles matches the snapshot 1`] = `
Object {
  "assistiveText": Object {
    "color": "#aaaaaa",
  },
  "bottom": Object {
    "height": 20,
    "marginTop": 4,
  },
  "container": Object {
    "marginBottom": 8,
    "position": "relative",
  },
  "disabled": Object {
    "& $label": Object {
      "color": "#dddddd",
    },
  },
  "errorAssistiveText": Object {
    "color": "#fe4a49",
  },
  "errorIcon": Object {
    "marginBottom": -2,
  },
  "label": Object {
    "& a": Object {
      "color": "#1476fb",
      "outline": "none",
      "textDecoration": "none",
    },
    "color": "#222222",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": 12,
    "lineHeight": "20px",
    "transition": "0.3s all",
  },
  "left": Object {
    "float": "left",
  },
  "top": Object {
    "&:after": Object {
      "clear": "both",
      "content": "\\"\\"",
    },
    "height": 24,
  },
}
`;

exports[`PillJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Pill)
    group={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "assistiveText": "Pill-assistiveText-0-1-19",
        "bottom": "Pill-bottom-0-1-18",
        "container": "Pill-container-0-1-13",
        "disabled": "Pill-disabled-0-1-17",
        "errorAssistiveText": "Pill-errorAssistiveText-0-1-20",
        "errorIcon": "Pill-errorIcon-0-1-21",
        "label": "Pill-label-0-1-15",
        "left": "Pill-left-0-1-16",
        "top": "Pill-top-0-1-14",
      },
      "group": Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "assistiveText": "Pill-assistiveText-0-1-19",
          "bottom": "Pill-bottom-0-1-18",
          "container": "Pill-container-0-1-13",
          "disabled": "Pill-disabled-0-1-17",
          "errorAssistiveText": "Pill-errorAssistiveText-0-1-20",
          "errorIcon": "Pill-errorIcon-0-1-21",
          "label": "Pill-label-0-1-15",
          "left": "Pill-left-0-1-16",
          "top": "Pill-top-0-1-14",
        },
        "group": Array [
          Object {
            "id": 1,
            "label": "foo",
          },
          Object {
            "id": 2,
            "label": "bar",
          },
          Object {
            "id": 3,
            "label": "baz",
          },
          Object {
            "id": 4,
            "label": "qux",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
